fix: rk3588 kernel version

--- a/board/rockchip/rk3588/linux-defconfig.config
+++ b/board/rockchip/rk3588/linux-defconfig.config
@@ -1,15 +1,15 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.1.75 Kernel Configuration
+# Linux/arm64 6.1.115 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="aarch64-buildroot-linux-gnu-gcc.br_real (Buildroot 2019.11-27707-g5d67742467) 13.3.0"
+CONFIG_CC_VERSION_TEXT="aarch64-buildroot-linux-gnu-gcc.br_real (Buildroot 2025.02.3-dirty) 14.2.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=130300
+CONFIG_GCC_VERSION=140200
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
-CONFIG_AS_VERSION=24000
+CONFIG_AS_VERSION=24301
 CONFIG_LD_IS_BFD=y
-CONFIG_LD_VERSION=24000
+CONFIG_LD_VERSION=24301
 CONFIG_LLD_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
@@ -105,10 +105,12 @@ CONFIG_USERMODE_DRIVER=y
 # CONFIG_BPF_LSM is not set
 # end of BPF subsystem
 
-CONFIG_PREEMPT_VOLUNTARY_BUILD=y
+CONFIG_PREEMPT_BUILD=y
 # CONFIG_PREEMPT_NONE is not set
-CONFIG_PREEMPT_VOLUNTARY=y
-# CONFIG_PREEMPT is not set
+# CONFIG_PREEMPT_VOLUNTARY is not set
+CONFIG_PREEMPT=y
+CONFIG_PREEMPT_COUNT=y
+CONFIG_PREEMPTION=y
 # CONFIG_PREEMPT_DYNAMIC is not set
 
 #
@@ -134,10 +136,12 @@ CONFIG_CPU_ISOLATION=y
 # RCU Subsystem
 #
 CONFIG_TREE_RCU=y
+CONFIG_PREEMPT_RCU=y
 # CONFIG_RCU_EXPERT is not set
 CONFIG_SRCU=y
 CONFIG_TREE_SRCU=y
 CONFIG_TASKS_RCU_GENERIC=y
+CONFIG_TASKS_RCU=y
 CONFIG_TASKS_RUDE_RCU=y
 CONFIG_TASKS_TRACE_RCU=y
 CONFIG_RCU_STALL_COMMON=y
@@ -163,7 +167,7 @@ CONFIG_UCLAMP_BUCKETS_COUNT=20
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_CC_HAS_INT128=y
 CONFIG_CC_IMPLICIT_FALLTHROUGH="-Wimplicit-fallthrough=5"
-CONFIG_GCC11_NO_ARRAY_BOUNDS=y
+CONFIG_GCC10_NO_ARRAY_BOUNDS=y
 CONFIG_CC_NO_ARRAY_BOUNDS=y
 CONFIG_ARCH_SUPPORTS_INT128=y
 CONFIG_CGROUPS=y
@@ -367,7 +371,9 @@ CONFIG_ARM64_ERRATUM_2054223=y
 CONFIG_ARM64_ERRATUM_2067961=y
 CONFIG_ARM64_ERRATUM_2441009=y
 CONFIG_ARM64_ERRATUM_2457168=y
+CONFIG_ARM64_WORKAROUND_SPECULATIVE_UNPRIV_LOAD=y
 CONFIG_ARM64_ERRATUM_2966298=y
+CONFIG_ARM64_ERRATUM_3194386=y
 # CONFIG_CAVIUM_ERRATUM_22375 is not set
 # CONFIG_CAVIUM_ERRATUM_23154 is not set
 CONFIG_CAVIUM_ERRATUM_27456=y
@@ -401,9 +407,9 @@ CONFIG_HOTPLUG_CPU=y
 # CONFIG_NUMA is not set
 # CONFIG_HZ_100 is not set
 # CONFIG_HZ_250 is not set
-CONFIG_HZ_300=y
-# CONFIG_HZ_1000 is not set
-CONFIG_HZ=300
+# CONFIG_HZ_300 is not set
+CONFIG_HZ_1000=y
+CONFIG_HZ=1000
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_HW_PERF_EVENTS=y
@@ -416,6 +422,7 @@ CONFIG_CC_HAVE_SHADOW_CALL_STACK=y
 # CONFIG_XEN is not set
 CONFIG_ARCH_FORCE_MAX_ORDER=11
 CONFIG_UNMAP_KERNEL_AT_EL0=y
+# CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY is not set
 CONFIG_RODATA_FULL_DEFAULT_ENABLED=y
 # CONFIG_ARM64_SW_TTBR0_PAN is not set
 CONFIG_ARM64_TAGGED_ADDR_ABI=y
@@ -434,6 +441,8 @@ CONFIG_ARM64_HW_AFDBM=y
 CONFIG_ARM64_PAN=y
 CONFIG_AS_HAS_LDAPR=y
 CONFIG_AS_HAS_LSE_ATOMICS=y
+CONFIG_ARM64_LSE_ATOMICS=y
+CONFIG_ARM64_USE_LSE_ATOMICS=y
 # end of ARMv8.1 architectural features
 
 #
@@ -786,57 +795,7 @@ CONFIG_MQ_IOSCHED_KYBER=y
 # end of IO Schedulers
 
 CONFIG_ASN1=y
-CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
-CONFIG_ARCH_INLINE_SPIN_TRYLOCK_BH=y
-CONFIG_ARCH_INLINE_SPIN_LOCK=y
-CONFIG_ARCH_INLINE_SPIN_LOCK_BH=y
-CONFIG_ARCH_INLINE_SPIN_LOCK_IRQ=y
-CONFIG_ARCH_INLINE_SPIN_LOCK_IRQSAVE=y
-CONFIG_ARCH_INLINE_SPIN_UNLOCK=y
-CONFIG_ARCH_INLINE_SPIN_UNLOCK_BH=y
-CONFIG_ARCH_INLINE_SPIN_UNLOCK_IRQ=y
-CONFIG_ARCH_INLINE_SPIN_UNLOCK_IRQRESTORE=y
-CONFIG_ARCH_INLINE_READ_LOCK=y
-CONFIG_ARCH_INLINE_READ_LOCK_BH=y
-CONFIG_ARCH_INLINE_READ_LOCK_IRQ=y
-CONFIG_ARCH_INLINE_READ_LOCK_IRQSAVE=y
-CONFIG_ARCH_INLINE_READ_UNLOCK=y
-CONFIG_ARCH_INLINE_READ_UNLOCK_BH=y
-CONFIG_ARCH_INLINE_READ_UNLOCK_IRQ=y
-CONFIG_ARCH_INLINE_READ_UNLOCK_IRQRESTORE=y
-CONFIG_ARCH_INLINE_WRITE_LOCK=y
-CONFIG_ARCH_INLINE_WRITE_LOCK_BH=y
-CONFIG_ARCH_INLINE_WRITE_LOCK_IRQ=y
-CONFIG_ARCH_INLINE_WRITE_LOCK_IRQSAVE=y
-CONFIG_ARCH_INLINE_WRITE_UNLOCK=y
-CONFIG_ARCH_INLINE_WRITE_UNLOCK_BH=y
-CONFIG_ARCH_INLINE_WRITE_UNLOCK_IRQ=y
-CONFIG_ARCH_INLINE_WRITE_UNLOCK_IRQRESTORE=y
-CONFIG_INLINE_SPIN_TRYLOCK=y
-CONFIG_INLINE_SPIN_TRYLOCK_BH=y
-CONFIG_INLINE_SPIN_LOCK=y
-CONFIG_INLINE_SPIN_LOCK_BH=y
-CONFIG_INLINE_SPIN_LOCK_IRQ=y
-CONFIG_INLINE_SPIN_LOCK_IRQSAVE=y
-CONFIG_INLINE_SPIN_UNLOCK_BH=y
-CONFIG_INLINE_SPIN_UNLOCK_IRQ=y
-CONFIG_INLINE_SPIN_UNLOCK_IRQRESTORE=y
-CONFIG_INLINE_READ_LOCK=y
-CONFIG_INLINE_READ_LOCK_BH=y
-CONFIG_INLINE_READ_LOCK_IRQ=y
-CONFIG_INLINE_READ_LOCK_IRQSAVE=y
-CONFIG_INLINE_READ_UNLOCK=y
-CONFIG_INLINE_READ_UNLOCK_BH=y
-CONFIG_INLINE_READ_UNLOCK_IRQ=y
-CONFIG_INLINE_READ_UNLOCK_IRQRESTORE=y
-CONFIG_INLINE_WRITE_LOCK=y
-CONFIG_INLINE_WRITE_LOCK_BH=y
-CONFIG_INLINE_WRITE_LOCK_IRQ=y
-CONFIG_INLINE_WRITE_LOCK_IRQSAVE=y
-CONFIG_INLINE_WRITE_UNLOCK=y
-CONFIG_INLINE_WRITE_UNLOCK_BH=y
-CONFIG_INLINE_WRITE_UNLOCK_IRQ=y
-CONFIG_INLINE_WRITE_UNLOCK_IRQRESTORE=y
+CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_RWSEM_SPIN_ON_OWNER=y
@@ -907,6 +866,7 @@ CONFIG_ARCH_ENABLE_SPLIT_PMD_PTLOCK=y
 CONFIG_MIGRATION=y
 CONFIG_ARCH_ENABLE_HUGEPAGE_MIGRATION=y
 CONFIG_CONTIG_ALLOC=y
+CONFIG_PCP_BATCH_SCALE_MAX=5
 CONFIG_PHYS_ADDR_T_64BIT=y
 # CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
@@ -1519,10 +1479,8 @@ CONFIG_NET_SCHED=y
 #
 # Queueing/Scheduling
 #
-CONFIG_NET_SCH_CBQ=m
 CONFIG_NET_SCH_HTB=m
 CONFIG_NET_SCH_HFSC=m
-CONFIG_NET_SCH_ATM=m
 CONFIG_NET_SCH_PRIO=m
 CONFIG_NET_SCH_MULTIQ=m
 CONFIG_NET_SCH_RED=m
@@ -1534,7 +1492,6 @@ CONFIG_NET_SCH_TBF=m
 # CONFIG_NET_SCH_ETF is not set
 # CONFIG_NET_SCH_TAPRIO is not set
 CONFIG_NET_SCH_GRED=m
-CONFIG_NET_SCH_DSMARK=m
 CONFIG_NET_SCH_NETEM=m
 CONFIG_NET_SCH_DRR=m
 CONFIG_NET_SCH_MQPRIO=m
@@ -2092,6 +2049,30 @@ CONFIG_MTD_NAND_CORE=y
 # CONFIG_MTD_ONENAND is not set
 # CONFIG_MTD_RAW_NAND is not set
 CONFIG_MTD_SPI_NAND=y
+CONFIG_MTD_SPI_NAND_DEVICE_AUTOSELECT=y
+CONFIG_MTD_SPI_NAND_ATO=y
+CONFIG_MTD_SPI_NAND_BIWIN=y
+CONFIG_MTD_SPI_NAND_DOSILICON=y
+CONFIG_MTD_SPI_NAND_ESMT=y
+CONFIG_MTD_SPI_NAND_ETRON=y
+CONFIG_MTD_SPI_NAND_FMSH=y
+CONFIG_MTD_SPI_NAND_FORESEE=y
+CONFIG_MTD_SPI_NAND_GIGADEVICE=y
+CONFIG_MTD_SPI_NAND_GSTO=y
+CONFIG_MTD_SPI_NAND_HIKSEMI=y
+CONFIG_MTD_SPI_NAND_HYF=y
+CONFIG_MTD_SPI_NAND_JSC=y
+CONFIG_MTD_SPI_NAND_MACRONIX=y
+CONFIG_MTD_SPI_NAND_MICRON=y
+CONFIG_MTD_SPI_NAND_PARAGON=y
+CONFIG_MTD_SPI_NAND_SILICONGO=y
+CONFIG_MTD_SPI_NAND_SKYHIGH=y
+CONFIG_MTD_SPI_NAND_TOSHIBA=y
+CONFIG_MTD_SPI_NAND_UNIM=y
+CONFIG_MTD_SPI_NAND_WINBOND=y
+CONFIG_MTD_SPI_NAND_XINCUN=y
+CONFIG_MTD_SPI_NAND_XTX=y
+CONFIG_MTD_SPI_NAND_ZBIT=y
 
 #
 # ECC engine support
@@ -2116,6 +2097,29 @@ CONFIG_MTD_SPI_NOR_USE_4K_SECTORS=y
 # CONFIG_MTD_SPI_NOR_SWP_DISABLE is not set
 CONFIG_MTD_SPI_NOR_SWP_DISABLE_ON_VOLATILE=y
 # CONFIG_MTD_SPI_NOR_SWP_KEEP is not set
+CONFIG_MTD_SPI_NOR_DEVICE_AUTOSELECT=y
+CONFIG_MTD_SPI_NOR_ATMEL=y
+CONFIG_MTD_SPI_NOR_BOYA=y
+CONFIG_MTD_SPI_NOR_CATALYST=y
+CONFIG_MTD_SPI_NOR_DOSILICON=y
+CONFIG_MTD_SPI_NOR_EON=y
+CONFIG_MTD_SPI_NOR_ESMT=y
+CONFIG_MTD_SPI_NOR_EVERSPIN=y
+CONFIG_MTD_SPI_NOR_FMSH=y
+CONFIG_MTD_SPI_NOR_FUJITSU=y
+CONFIG_MTD_SPI_NOR_GIGADEVICE=y
+CONFIG_MTD_SPI_NOR_INTEL=y
+CONFIG_MTD_SPI_NOR_ISSI=y
+CONFIG_MTD_SPI_NOR_MACRONIX=y
+CONFIG_MTD_SPI_NOR_NORMEM=y
+CONFIG_MTD_SPI_NOR_PUYA=y
+CONFIG_MTD_SPI_NOR_SPANSION=y
+CONFIG_MTD_SPI_NOR_STMICRO=y
+CONFIG_MTD_SPI_NOR_SST=y
+CONFIG_MTD_SPI_NOR_WINBOND=y
+CONFIG_MTD_SPI_NOR_XILINX=y
+CONFIG_MTD_SPI_NOR_XMC=y
+CONFIG_MTD_SPI_NOR_XTX=y
 CONFIG_MTD_UBI=y
 CONFIG_MTD_UBI_WL_THRESHOLD=4096
 CONFIG_MTD_UBI_BEB_LIMIT=20
@@ -2193,6 +2197,7 @@ CONFIG_NVME_TARGET_AUTH=y
 # end of RK628 misc driver
 
 # CONFIG_RK803 is not set
+# CONFIG_CONFIG_ROCKPI_MCU is not set
 # CONFIG_PCIE_FUNC_RKEP is not set
 # CONFIG_LT7911D_FB_NOTIFIER is not set
 # CONFIG_AD525X_DPOT is not set
@@ -2537,9 +2542,6 @@ CONFIG_NET_VENDOR_GOOGLE=y
 CONFIG_NET_VENDOR_HUAWEI=y
 # CONFIG_HINIC is not set
 # CONFIG_NET_VENDOR_INTEL is not set
-CONFIG_NET_VENDOR_WANGXUN=y
-# CONFIG_NGBE is not set
-# CONFIG_TXGBE is not set
 # CONFIG_JME is not set
 CONFIG_NET_VENDOR_ADI=y
 # CONFIG_ADIN1110 is not set
@@ -2610,6 +2612,9 @@ CONFIG_DWMAC_ROCKCHIP_TOOL=y
 CONFIG_NET_VENDOR_VERTEXCOM=y
 # CONFIG_MSE102X is not set
 # CONFIG_NET_VENDOR_VIA is not set
+CONFIG_NET_VENDOR_WANGXUN=y
+# CONFIG_NGBE is not set
+# CONFIG_TXGBE is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
 CONFIG_NET_VENDOR_XILINX=y
 # CONFIG_XILINX_EMACLITE is not set
@@ -3321,6 +3326,7 @@ CONFIG_TOUCHSCREEN_COLIBRI_VF50=m
 CONFIG_TOUCHSCREEN_ROHM_BU21023=m
 CONFIG_TOUCHSCREEN_IQS5XX=m
 CONFIG_TOUCHSCREEN_ZINITIX=m
+# CONFIG_TOUCHSCREEN_HIMAX_CHIPSET is not set
 CONFIG_ROCKCHIP_REMOTECTL=y
 CONFIG_ROCKCHIP_REMOTECTL_PWM=y
 
@@ -3700,6 +3706,7 @@ CONFIG_SPI_BITBANG=y
 CONFIG_SPI_ROCKCHIP=y
 CONFIG_SPI_ROCKCHIP_MISCDEV=y
 # CONFIG_SPI_ROCKCHIP_FLEXBUS_FSPI is not set
+# CONFIG_SPI_ROCKCHIP_FLEXBUS_SPI is not set
 CONFIG_SPI_ROCKCHIP_SFC=y
 CONFIG_SPI_ROCKCHIP_SLAVE=y
 # CONFIG_SPI_SC18IS602 is not set
@@ -4384,7 +4391,6 @@ CONFIG_MFD_SIMPLE_MFD_I2C=m
 # CONFIG_MFD_SKY81452 is not set
 # CONFIG_MFD_STMPE is not set
 CONFIG_MFD_SYSCON=y
-# CONFIG_MFD_TI_AM335X_TSCADC is not set
 # CONFIG_MFD_LP3943 is not set
 # CONFIG_MFD_LP8788 is not set
 # CONFIG_MFD_TI_LMU is not set
@@ -4481,6 +4487,7 @@ CONFIG_REGULATOR_PWM=y
 # CONFIG_REGULATOR_QCOM_SPMI is not set
 # CONFIG_REGULATOR_QCOM_USB_VBUS is not set
 # CONFIG_REGULATOR_RASPBERRYPI_TOUCHSCREEN_ATTINY is not set
+# CONFIG_REGULATOR_RK801 is not set
 CONFIG_REGULATOR_RK806=y
 CONFIG_REGULATOR_RK808=y
 CONFIG_REGULATOR_RK860X=y
@@ -4517,6 +4524,7 @@ CONFIG_CEC_NOTIFIER=y
 #
 CONFIG_MEDIA_CEC_SUPPORT=y
 CONFIG_CEC_CH7322=m
+# CONFIG_CEC_GPIO is not set
 CONFIG_USB_PULSE8_CEC=m
 CONFIG_USB_RAINSHADOW_CEC=m
 # end of CEC support
@@ -4843,6 +4851,7 @@ CONFIG_ROCKCHIP_CIF_WORKMODE_PINGPONG=y
 CONFIG_ROCKCHIP_CIF_USE_DUMMY_BUF=y
 # CONFIG_ROCKCHIP_CIF_USE_NONE_DUMMY_BUF is not set
 # CONFIG_ROCKCHIP_CIF_USE_MONITOR is not set
+# CONFIG_ROCKCHIP_FLEXBUS_CIF is not set
 CONFIG_VIDEO_ROCKCHIP_RKISP1=y
 CONFIG_VIDEO_ROCKCHIP_ISP=y
 CONFIG_VIDEO_ROCKCHIP_ISP_VERSION_V1X=y
@@ -4969,6 +4978,7 @@ CONFIG_VIDEO_IMX335=m
 CONFIG_VIDEO_IMX347=m
 CONFIG_VIDEO_IMX355=m
 CONFIG_VIDEO_IMX378=m
+# CONFIG_VIDEO_IMX386 is not set
 # CONFIG_VIDEO_IMX412 is not set
 CONFIG_VIDEO_IMX415=y
 CONFIG_VIDEO_IMX464=y
@@ -5002,6 +5012,7 @@ CONFIG_VIDEO_OS03B10=m
 CONFIG_VIDEO_OS04A10=y
 # CONFIG_VIDEO_OS04D10 is not set
 CONFIG_VIDEO_OS05A20=m
+# CONFIG_VIDEO_OS05L10 is not set
 CONFIG_VIDEO_OS08A20=m
 # CONFIG_VIDEO_OV02A10 is not set
 CONFIG_VIDEO_OV02B10=m
@@ -5111,6 +5122,7 @@ CONFIG_VIDEO_DW9768=m
 CONFIG_VIDEO_DW9800W=m
 CONFIG_VIDEO_DW9807_VCM=m
 CONFIG_VIDEO_FP5510=m
+# CONFIG_VIDEO_VM149C is not set
 # end of Lens drivers
 
 #
@@ -5188,6 +5200,7 @@ CONFIG_VIDEO_SAA711X=m
 # CONFIG_VIDEO_TC35874X is not set
 # CONFIG_VIDEO_TECHPOINT is not set
 # CONFIG_VIDEO_THCV244 is not set
+# CONFIG_VIDEO_TP2855 is not set
 # CONFIG_VIDEO_TVP514X is not set
 CONFIG_VIDEO_TVP5150=m
 # CONFIG_VIDEO_TVP7002 is not set
@@ -5536,6 +5549,7 @@ CONFIG_ROCKCHIP_CDN_DP=y
 # CONFIG_ROCKCHIP_DRM_TVE is not set
 CONFIG_ROCKCHIP_DW_HDMI=y
 CONFIG_ROCKCHIP_DW_MIPI_DSI=y
+CONFIG_ROCKCHIP_DW_MIPI_DSI2=y
 CONFIG_ROCKCHIP_DW_DP=y
 CONFIG_ROCKCHIP_INNO_HDMI=y
 CONFIG_ROCKCHIP_LVDS=y
@@ -5605,6 +5619,7 @@ CONFIG_DRM_PANEL_ORISETECH_OTM8009A=m
 CONFIG_DRM_PANEL_PANASONIC_VVX10F034N00=m
 # CONFIG_DRM_PANEL_RADXA_DISPLAY_8HD is not set
 CONFIG_DRM_PANEL_RASPBERRYPI_TOUCHSCREEN=m
+# CONFIG_DRM_PANEL_RASPITS_TC358762 is not set
 # CONFIG_DRM_PANEL_RAYDIUM_RM67191 is not set
 # CONFIG_DRM_PANEL_RAYDIUM_RM68200 is not set
 CONFIG_DRM_PANEL_RONBO_RB070D30=m
@@ -5749,6 +5764,7 @@ CONFIG_MALI_BIFROST=y
 CONFIG_MALI_PLATFORM_NAME="rk"
 CONFIG_MALI_REAL_HW=y
 # CONFIG_MALI_BIFROST_NO_MALI is not set
+# CONFIG_MALI_IS_FPGA is not set
 
 #
 # Platform specific options
@@ -5759,17 +5775,13 @@ CONFIG_MALI_CSF_SUPPORT=y
 CONFIG_MALI_BIFROST_DEVFREQ=y
 CONFIG_MALI_BIFROST_GATOR_SUPPORT=y
 CONFIG_MALI_BIFROST_ENABLE_TRACE=y
+# CONFIG_MALI_ARBITER_SUPPORT is not set
 # CONFIG_MALI_DMA_BUF_MAP_ON_DEMAND is not set
 # CONFIG_MALI_DMA_BUF_LEGACY_COMPAT is not set
 # CONFIG_MALI_CORESIGHT is not set
 CONFIG_MALI_BIFROST_EXPERT=y
-# CONFIG_LARGE_PAGE_ALLOC_OVERRIDE is not set
-# CONFIG_LARGE_PAGE_ALLOC is not set
-# CONFIG_MALI_MEMORY_FULLY_BACKED is not set
-
-#
-# Platform options
-#
+CONFIG_LARGE_PAGE_SUPPORT=y
+CONFIG_PAGE_MIGRATION_SUPPORT=y
 
 #
 # Debug options
@@ -5784,7 +5796,6 @@ CONFIG_MALI_BIFROST_SYSTEM_TRACE=y
 CONFIG_MALI_PRFCNT_SET_PRIMARY=y
 # CONFIG_MALI_BIFROST_PRFCNT_SET_SECONDARY is not set
 # CONFIG_MALI_PRFCNT_SET_TERTIARY is not set
-# CONFIG_MALI_PRFCNT_SET_SELECT_VIA_DEBUG_FS is not set
 # CONFIG_MALI_JOB_DUMP is not set
 
 #
@@ -5793,6 +5804,8 @@ CONFIG_MALI_PRFCNT_SET_PRIMARY=y
 # CONFIG_MALI_HW_ERRATA_1485982_NOT_AFFECTED is not set
 # CONFIG_MALI_HW_ERRATA_1485982_USE_CLOCK_ALTERNATIVE is not set
 # CONFIG_MALI_ARBITRATION is not set
+CONFIG_MALI_TRACE_POWER_GPU_WORK_PERIOD=y
+CONFIG_MALI_CSF_INCLUDE_FW=y
 
 #
 # Frame buffer Devices
@@ -5927,6 +5940,7 @@ CONFIG_ROCKCHIP_MPP_JPGDEC=y
 # CONFIG_ROCKCHIP_MPP_JPGENC is not set
 CONFIG_ROCKCHIP_MPP_AV1DEC=y
 # CONFIG_ROCKCHIP_MPP_VDPP is not set
+# CONFIG_ROCKCHIP_MPP_OSAL is not set
 # CONFIG_ROCKCHIP_DVBM is not set
 
 #
@@ -6015,6 +6029,7 @@ CONFIG_SND_USB_AUDIO_USE_MEDIA_CONTROLLER=y
 # CONFIG_SND_USB_VARIAX is not set
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_GENERIC_DMAENGINE_PCM=y
+# CONFIG_SND_SOC_DYNAMIC_DMA_CHAN is not set
 # CONFIG_SND_SOC_ADI is not set
 # CONFIG_SND_SOC_AMD_ACP is not set
 # CONFIG_SND_AMD_ACP_CONFIG is not set
@@ -6044,7 +6059,9 @@ CONFIG_SND_SOC_GENERIC_DMAENGINE_PCM=y
 # CONFIG_SND_SOC_IMG is not set
 # CONFIG_SND_SOC_MTK_BTCVSD is not set
 CONFIG_SND_SOC_ROCKCHIP=y
+# CONFIG_SND_SOC_ROCKCHIP_ASRC is not set
 # CONFIG_SND_SOC_ROCKCHIP_DLP_PCM is not set
+# CONFIG_SND_SOC_ROCKCHIP_DUMMY_DAI is not set
 CONFIG_SND_SOC_ROCKCHIP_I2S=y
 CONFIG_SND_SOC_ROCKCHIP_I2S_TDM=y
 # CONFIG_SND_SOC_ROCKCHIP_I2S_TDM_MULTI_LANES is not set
@@ -6180,6 +6197,7 @@ CONFIG_SND_SOC_MAX98090=y
 # CONFIG_SND_SOC_RK3228 is not set
 CONFIG_SND_SOC_RK3308=y
 CONFIG_SND_SOC_RK3328=y
+# CONFIG_SND_SOC_RK3506 is not set
 CONFIG_SND_SOC_RK3528=y
 # CONFIG_SND_SOC_RK730 is not set
 CONFIG_SND_SOC_RK817=y
@@ -6554,7 +6572,6 @@ CONFIG_USB_DWC3_DUAL_ROLE=y
 #
 CONFIG_USB_DWC3_HAPS=y
 CONFIG_USB_DWC3_OF_SIMPLE=y
-CONFIG_USB_DWC3_ROCKCHIP_INNO=y
 CONFIG_USB_DWC2=y
 # CONFIG_USB_DWC2_HOST is not set
 
@@ -7088,6 +7105,7 @@ CONFIG_DMA_OF=y
 # CONFIG_MV_XOR_V2 is not set
 CONFIG_PL330_DMA=y
 # CONFIG_PLX_DMA is not set
+# CONFIG_ROCKCHIP_DMA is not set
 # CONFIG_XILINX_DMA is not set
 # CONFIG_XILINX_ZYNQMP_DMA is not set
 # CONFIG_XILINX_ZYNQMP_DPDMA is not set
@@ -7315,6 +7333,7 @@ CONFIG_ROCKCHIP_CLK_BOOST=y
 CONFIG_ROCKCHIP_CLK_INV=y
 CONFIG_ROCKCHIP_CLK_OUT=y
 CONFIG_ROCKCHIP_CLK_PVTM=y
+# CONFIG_ROCKCHIP_CLK_PVTPLL is not set
 CONFIG_ROCKCHIP_DDRCLK=y
 CONFIG_ROCKCHIP_DDRCLK_SIP=y
 CONFIG_ROCKCHIP_DDRCLK_SIP_V2=y
@@ -7448,6 +7467,7 @@ CONFIG_CPU_RK1808=y
 CONFIG_CPU_RK3328=y
 # CONFIG_CPU_RK3368 is not set
 CONFIG_CPU_RK3399=y
+# CONFIG_CPU_RK3506 is not set
 CONFIG_CPU_RK3528=y
 # CONFIG_CPU_RK3562 is not set
 CONFIG_CPU_RK3568=y
@@ -7498,7 +7518,6 @@ CONFIG_ROCKCHIP_FIQ_DEBUGGER=y
 CONFIG_ROCKCHIP_DEBUG=y
 # CONFIG_ROCKCHIP_MINI_KERNEL is not set
 # CONFIG_ROCKCHIP_THUNDER_BOOT is not set
-# CONFIG_ROCKCHIP_THUNDER_BOOT_DEFER_FREE_MEMBLOCK is not set
 # CONFIG_ROCKCHIP_NPOR_POWERGOOD is not set
 # CONFIG_RK_CMA_PROCFS is not set
 CONFIG_RK_DMABUF_PROCFS=y
@@ -7663,6 +7682,7 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_QCOM_SPMI_IADC is not set
 # CONFIG_QCOM_SPMI_VADC is not set
 # CONFIG_QCOM_SPMI_ADC5 is not set
+# CONFIG_ROCKCHIP_FLEXBUS_ADC is not set
 CONFIG_ROCKCHIP_SARADC=y
 # CONFIG_ROCKCHIP_SARADC_TEST_CHN is not set
 # CONFIG_RICHTEK_RTQ6056 is not set
@@ -7786,6 +7806,7 @@ CONFIG_TI_ADS1015=y
 # CONFIG_MAX5821 is not set
 # CONFIG_MCP4725 is not set
 # CONFIG_MCP4922 is not set
+# CONFIG_ROCKCHIP_FLEXBUS_DAC is not set
 # CONFIG_TI_DAC082S085 is not set
 # CONFIG_TI_DAC5571 is not set
 # CONFIG_TI_DAC7311 is not set
@@ -7888,6 +7909,8 @@ CONFIG_TI_ADS1015=y
 CONFIG_INV_ICM42600=y
 CONFIG_INV_ICM42600_I2C=y
 CONFIG_INV_ICM42600_SPI=y
+# CONFIG_INV_ICM42670_I2C is not set
+# CONFIG_INV_ICM42670_SPI is not set
 # CONFIG_INV_MPU6050_I2C is not set
 # CONFIG_INV_MPU6050_SPI is not set
 # CONFIG_IIO_ST_LSM6DSR is not set
@@ -8155,7 +8178,6 @@ CONFIG_PHY_ROCKCHIP_CSI2_DPHY=y
 CONFIG_PHY_ROCKCHIP_DP=y
 # CONFIG_PHY_ROCKCHIP_DPHY_RX0 is not set
 CONFIG_PHY_ROCKCHIP_EMMC=y
-# CONFIG_PHY_ROCKCHIP_INNO_COMBPHY is not set
 CONFIG_PHY_ROCKCHIP_INNO_HDMI=y
 CONFIG_PHY_ROCKCHIP_INNO_USB2=y
 CONFIG_PHY_ROCKCHIP_INNO_USB3=y
@@ -8191,6 +8213,7 @@ CONFIG_ARM_PMU=y
 # CONFIG_ARM_SPE_PMU is not set
 # CONFIG_HISI_PCIE_PMU is not set
 # CONFIG_HNS3_PMU is not set
+# CONFIG_DWC_PCIE_PMU is not set
 # end of Performance monitor support
 
 # CONFIG_RAS is not set
@@ -8492,26 +8515,25 @@ CONFIG_PSTORE_RAM=y
 # CONFIG_EROFS_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_NFS_FS=m
-CONFIG_NFS_V2=y
-CONFIG_NFS_V3=y
+CONFIG_NFS_V2=m
+CONFIG_NFS_V3=m
 CONFIG_NFS_V3_ACL=y
-CONFIG_NFS_V4=y
+CONFIG_NFS_V4=m
 CONFIG_NFS_SWAP=y
 CONFIG_NFS_V4_1=y
 CONFIG_NFS_V4_2=y
-CONFIG_PNFS_FILE_LAYOUT=y
+CONFIG_PNFS_FILE_LAYOUT=m
 CONFIG_PNFS_BLOCK=m
-CONFIG_PNFS_FLEXFILE_LAYOUT=y
+CONFIG_PNFS_FLEXFILE_LAYOUT=m
 CONFIG_NFS_V4_1_IMPLEMENTATION_ID_DOMAIN="kernel.org"
 CONFIG_NFS_V4_1_MIGRATION=y
 CONFIG_NFS_V4_SECURITY_LABEL=y
-CONFIG_ROOT_NFS=y
 # CONFIG_NFS_USE_LEGACY_DNS is not set
 CONFIG_NFS_USE_KERNEL_DNS=y
 CONFIG_NFS_DISABLE_UDP_SUPPORT=y
 # CONFIG_NFS_V4_2_READ_PLUS is not set
 CONFIG_NFSD=m
-CONFIG_NFSD_V2_ACL=y
+# CONFIG_NFSD_V2 is not set
 CONFIG_NFSD_V3_ACL=y
 CONFIG_NFSD_V4=y
 # CONFIG_NFSD_BLOCKLAYOUT is not set
@@ -8519,14 +8541,14 @@ CONFIG_NFSD_V4=y
 # CONFIG_NFSD_FLEXFILELAYOUT is not set
 # CONFIG_NFSD_V4_2_INTER_SSC is not set
 # CONFIG_NFSD_V4_SECURITY_LABEL is not set
-CONFIG_GRACE_PERIOD=y
-CONFIG_LOCKD=y
+CONFIG_GRACE_PERIOD=m
+CONFIG_LOCKD=m
 CONFIG_LOCKD_V4=y
-CONFIG_NFS_ACL_SUPPORT=y
+CONFIG_NFS_ACL_SUPPORT=m
 CONFIG_NFS_COMMON=y
 CONFIG_NFS_V4_2_SSC_HELPER=y
-CONFIG_SUNRPC=y
-CONFIG_SUNRPC_GSS=y
+CONFIG_SUNRPC=m
+CONFIG_SUNRPC_GSS=m
 CONFIG_SUNRPC_BACKCHANNEL=y
 CONFIG_SUNRPC_SWAP=y
 CONFIG_RPCSEC_GSS_KRB5=m
@@ -8549,7 +8571,6 @@ CONFIG_CIFS_DFS_UPCALL=y
 CONFIG_SMB_SERVER=y
 CONFIG_SMB_SERVER_CHECK_CAP_NET_ADMIN=y
 # CONFIG_SMB_SERVER_KERBEROS5 is not set
-# CONFIG_SMB_SERVER_SMBDIRECT is not set
 CONFIG_SMBFS=y
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
@@ -8623,6 +8644,9 @@ CONFIG_ENCRYPTED_KEYS=m
 # CONFIG_USER_DECRYPTED_DATA is not set
 # CONFIG_KEY_DH_OPERATIONS is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
+CONFIG_PROC_MEM_ALWAYS_FORCE=y
+# CONFIG_PROC_MEM_FORCE_PTRACE is not set
+# CONFIG_PROC_MEM_NO_FORCE is not set
 CONFIG_SECURITY=y
 CONFIG_SECURITYFS=y
 CONFIG_SECURITY_NETWORK=y
@@ -8913,6 +8937,7 @@ CONFIG_CRYPTO_DEV_ROCKCHIP=y
 CONFIG_CRYPTO_DEV_ROCKCHIP_V1=y
 CONFIG_CRYPTO_DEV_ROCKCHIP_V2=y
 # CONFIG_CRYPTO_DEV_ROCKCHIP_V3 is not set
+CONFIG_CRYPTO_DEV_ROCKCHIP_CRYPTO=y
 CONFIG_CRYPTO_DEV_ROCKCHIP_DEV=y
 # CONFIG_CRYPTO_DEV_VIRTIO is not set
 # CONFIG_CRYPTO_DEV_SAFEXCEL is not set
@@ -9242,6 +9267,7 @@ CONFIG_SCHED_INFO=y
 # end of Scheduler Debugging
 
 # CONFIG_DEBUG_TIMEKEEPING is not set
+# CONFIG_DEBUG_PREEMPT is not set
 
 #
 # Lock Debugging (spinlocks, mutexes, etc...)
@@ -9322,6 +9348,7 @@ CONFIG_DYNAMIC_FTRACE_WITH_REGS=y
 # CONFIG_FUNCTION_PROFILER is not set
 # CONFIG_STACK_TRACER is not set
 # CONFIG_IRQSOFF_TRACER is not set
+# CONFIG_PREEMPT_TRACER is not set
 # CONFIG_SCHED_TRACER is not set
 # CONFIG_HWLAT_TRACER is not set
 # CONFIG_OSNOISE_TRACER is not set
