moved and update reglinux-zramswap

--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -192,12 +192,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_LUA_5_4
 
 	# swap on zram, optional user-enabled service
-	select BR2_PACKAGE_ZRAMSWAP             if BR2_PACKAGE_SYSTEM_TARGET_BCM2835 || \
-						   BR2_PACKAGE_SYSTEM_TARGET_BCM2836 || \
-						   BR2_PACKAGE_SYSTEM_TARGET_BCM2837 || \
-						   BR2_PACKAGE_SYSTEM_TARGET_RK3128  || \
-						   BR2_PACKAGE_SYSTEM_TARGET_RK3326  || \
-						   BR2_PACKAGE_SYSTEM_TARGET_JZ4770
+	select BR2_PACKAGE_REGLINUX_ZRAMSWAP	# ALL
 
 	# irq balancing
 	select BR2_PACKAGE_IRQBALANCE
