Rework Fluidsynth and MT-32 emulation

--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -37,7 +37,14 @@ config BR2_PACKAGE_REGLINUX_MUSIC_SUPPORT
 						   !BR2_PACKAGE_SYSTEM_TARGET_BCM2836 && \
 						   !BR2_PACKAGE_SYSTEM_TARGET_RK3128  && \
 						   !BR2_PACKAGE_SYSTEM_TARGET_H3      && \
-						   !BR2_PACKAGE_SYSTEM_TARGET_CHA
+						   !BR2_PACKAGE_SYSTEM_TARGET_CHA     && \
+						   !BR2_PACKAGE_SYSTEM_TARGET_RK3326  && \
+						   !BR2_PACKAGE_SYSTEM_TARGET_H700
+
+	select BR2_PACKAGE_FLUIDSYNTH_ALSA_LIB	if BR2_PACKAGE_FLUIDSYNTH
+
+	# Roland MT-32 emulation (munt)
+	select BR2_PACKAGE_LIBMT32EMU		if BR2_PACKAGE_FLUIDSYNTH
 
 	# MIDI tools
 	select BR2_PACKAGE_ALSA_UTILS_ACONNECT  if BR2_PACKAGE_ALSA_UTILS
