--- a/Config.in
+++ b/Config.in
@@ -278,6 +278,7 @@ menu "Libraries"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/libdof/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/libenet/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/libliftoff/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/libmt32emu/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/libpinmame/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/libportmidi/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/libpupdmd/Config.in"
