--- a/package/emulators/xemu/Config.in
+++ b/package/emulators/xemu/Config.in
@@ -10,7 +10,7 @@ config BR2_PACKAGE_XEMU
     select BR2_PACKAGE_HOST_LIBCURL_CURL
     select BR2_PACKAGE_LIBCURL
     select BR2_PACKAGE_JSON_FOR_MODERN_CPP
-    select BR2_PACKAGE_GLSLANG			if BR2_PACKAGE_REGLINUX_VULKAN
+    select BR2_PACKAGE_HOST_CMAKE
     help
         Xbox (og) emulator based on QEMU
         
