--- a/package/ports/cgenius/Config.in
+++ b/package/ports/cgenius/Config.in
@@ -8,6 +8,7 @@ config BR2_PACKAGE_CGENIUS
 	select BR2_PACKAGE_XXD
 	select BR2_PACKAGE_PYTHON3_CONFIGOBJ
 	select BR2_PACKAGE_LIBBACKTRACE		if BR2_TOOLCHAIN_USES_MUSL
+	select BR2_PACKAGE_LIBEXECINFO		if BR2_TOOLCHAIN_USES_MUSL
 	help
 	  Commander Genius - Commander Keen Engine
 	  
