--- a/board/broadcom/bcm2711/linux-broadcom64-current.config
+++ b/board/broadcom/bcm2711/linux-broadcom64-current.config
@@ -6388,7 +6388,7 @@ CONFIG_USB_XHCI_PLATFORM=y
 # CONFIG_USB_UHCI_HCD is not set
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
-CONFIG_USB_DWCOTG=y
+# CONFIG_USB_DWCOTG is not set
 # CONFIG_USB_HCD_BCMA is not set
 # CONFIG_USB_HCD_SSB is not set
 # CONFIG_USB_HCD_TEST_MODE is not set
@@ -6454,7 +6454,7 @@ CONFIG_USB_DWC3_DUAL_ROLE=y
 #
 CONFIG_USB_DWC3_HAPS=y
 CONFIG_USB_DWC3_OF_SIMPLE=y
-CONFIG_USB_DWC2=m
+CONFIG_USB_DWC2=y
 # CONFIG_USB_DWC2_HOST is not set
 
 #
