--- a/board/broadcom/bcm2837/linux-broadcom64-current.config
+++ b/board/broadcom/bcm2837/linux-broadcom64-current.config
@@ -5715,7 +5715,7 @@ CONFIG_USB_MON=m
 # CONFIG_USB_OHCI_HCD is not set
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
-CONFIG_USB_DWCOTG=y
+# CONFIG_USB_DWCOTG is not set
 # CONFIG_USB_HCD_BCMA is not set
 # CONFIG_USB_HCD_SSB is not set
 # CONFIG_USB_HCD_TEST_MODE is not set
