--- a/board/rockchip/rk3399/rock960/genimage.cfg
+++ b/board/rockchip/rk3399/rock960/genimage.cfg
@@ -19,7 +19,7 @@ image userdata.ext4 {
 
 image reglinux.img {
 	hdimage {
-                partition-table-type = "hybrid"
+#                partition-table-type = "hybrid"
 		align = "1M"
 	}
 
