--- a/custom/toolchain/Config.in
+++ b/custom/toolchain/Config.in
@@ -659,6 +659,10 @@ config BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_15
 	bool
 	select BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_14
 
+config BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_16
+	bool
+	select BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_15
+
 # This should be selected by the latest version, above, to indicate that
 # Buildroot does not know of more recent headers than the ones selected.
 # This allows using toolchains with headers more recent than Buildroot
@@ -670,7 +674,8 @@ config BR2_TOOLCHAIN_HEADERS_LATEST
 # stops affecting a value on the first matching default.
 config BR2_TOOLCHAIN_HEADERS_AT_LEAST
 	string
-	#default "6.15-rc3" if BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_15
+	#default "6.16-rc1" if BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_16
+	default "6.15" if BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_15
 	default "6.14" if BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_14
 	default "6.13" if BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_13
 	default "6.12" if BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_12
