Fix rk3588 kernel config

--- a/board/rockchip/rk3588/linux-defconfig.config
+++ b/board/rockchip/rk3588/linux-defconfig.config
@@ -6263,7 +6263,7 @@ CONFIG_DRM_PANEL_DSI_CM=m
 CONFIG_DRM_PANEL_LVDS=m
 # CONFIG_DRM_PANEL_HIMAX_HX83102 is not set
 # CONFIG_DRM_PANEL_HIMAX_HX83112A is not set
-# CONFIG_DRM_PANEL_HIMAX_HX8394 is not set
+CONFIG_DRM_PANEL_HIMAX_HX8394=m
 CONFIG_DRM_PANEL_ILITEK_IL9322=m
 CONFIG_DRM_PANEL_ILITEK_ILI9341=m
 # CONFIG_DRM_PANEL_ILITEK_ILI9805 is not set
@@ -8812,8 +8812,8 @@ CONFIG_FXOS8700_SPI=m
 # CONFIG_KMX61 is not set
 # CONFIG_INV_ICM42600_I2C is not set
 # CONFIG_INV_ICM42600_SPI is not set
-# CONFIG_INV_MPU6050_I2C is not set
-# CONFIG_INV_MPU6050_SPI is not set
+CONFIG_INV_MPU6050_I2C=m
+CONFIG_INV_MPU6050_SPI=m
 # CONFIG_SMI240 is not set
 # CONFIG_IIO_ST_LSM6DSX is not set
 CONFIG_IIO_ST_LSM9DS0=m
