organizing firmware package structure

--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -375,6 +375,16 @@ config BR2_PACKAGE_BATOCERA_GUNS
 config BR2_PACKAGE_SYSTEM_LINUX_FIRMWARES
 	bool "System firmware packages"
 
+	# vim4
+	select BR2_PACKAGE_FIRMWARE_KHADAS_VIM4		if BR2_PACKAGE_SYSTEM_TARGET_A3GEN2
+
+	# armbian
+	select BR2_PACKAGE_FIRMWARE_ARMBIAN		if BR2_PACKAGE_SYSTEM_TARGET_MT8395	|| \
+						   	   BR2_PACKAGE_SYSTEM_TARGET_RK3399	|| \
+							   BR2_PACKAGE_SYSTEM_TARGET_RK3568	|| \
+							   BR2_PACKAGE_SYSTEM_TARGET_S9GEN4	|| \
+							   BR2_PACKAGE_SYSTEM_TARGET_SM8550
+
 	# alllinuxfirmwares
 	select BR2_PACKAGE_ALLLINUXFIRMWARES		if !BR2_PACKAGE_SYSTEM_TARGET_H616 && !BR2_PACKAGE_SYSTEM_TARGET_H700
 
@@ -382,17 +392,17 @@ config BR2_PACKAGE_SYSTEM_LINUX_FIRMWARES
 	select BR2_PACKAGE_LINUX_FIRMWARE		if BR2_PACKAGE_SYSTEM_TARGET_RK3288
 
 	# audio
-	select BR2_PACKAGE_SOUND_OPEN_FIRMWARE			if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
+	select BR2_PACKAGE_SOUND_OPEN_FIRMWARE		if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
 
 	# RK3588
-	select BR2_PACKAGE_FIRMWARE_RK3588			if BR2_PACKAGE_SYSTEM_TARGET_RK3588
+	select BR2_PACKAGE_FIRMWARE_RK3588		if BR2_PACKAGE_SYSTEM_TARGET_RK3588
 
 	# orangepi firmware
-	select BR2_PACKAGE_FIRMWARE_ORANGEPI			if BR2_PACKAGE_SYSTEM_TARGET_H3	|| \
-								   BR2_PACKAGE_SYSTEM_TARGET_H5	|| \
-								   BR2_PACKAGE_SYSTEM_TARGET_H6	|| \
-								   BR2_PACKAGE_SYSTEM_TARGET_H616	|| \
-								   BR2_PACKAGE_SYSTEM_TARGET_H700
+	select BR2_PACKAGE_FIRMWARE_ORANGEPI		if BR2_PACKAGE_SYSTEM_TARGET_H3		|| \
+							   BR2_PACKAGE_SYSTEM_TARGET_H5		|| \
+							   BR2_PACKAGE_SYSTEM_TARGET_H6		|| \
+							   BR2_PACKAGE_SYSTEM_TARGET_H616	|| \
+							   BR2_PACKAGE_SYSTEM_TARGET_H700
 
 config BR2_PACKAGE_REGLINUX_SDL2
 	bool "REG-Linux SDL2"
