lr-geargrafx 1.5.1 (PCECD support, no CHD yet, WIP)

--- a/package/emulationstation/es-system/es_systems.yml
+++ b/package/emulationstation/es-system/es_systems.yml
@@ -635,6 +635,7 @@ pcenginecd:
     libretro:
       pce:      { requireAnyOf: [BR2_PACKAGE_LIBRETRO_BEETLE_PCE] }
       pce_fast: { requireAnyOf: [BR2_PACKAGE_LIBRETRO_BEETLE_PCE_FAST] }
+      geargrafx: { requireAnyOf: [BR2_PACKAGE_LIBRETRO_GEARGRAFX], incompatible_extensions: [chd]  }
     mednafen:
       mednafen: { requireAnyOf: [BR2_PACKAGE_MEDNAFEN] }
 
