--- a/Config.in
+++ b/Config.in
@@ -169,6 +169,7 @@ menu "Emulators"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/emulators/vita3k/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/emulators/xemu/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/emulators/xenia-canary/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/emulators/ymir/Config.in"
 menu "mupen64plus"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/emulators/mupen64plus/mupen64plus-core/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/emulators/mupen64plus/mupen64plus-ui-console/Config.in"
